<!--?xml version=" ? encoding="utf-8" 1.0?-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	>

	<Button
	    android:id="@+id/btn_inventory"
	    android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/label_inventory" />

	<Button
	    android:id="@+id/btn_production"
	    android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/label_production" />

	<Button
	    android:id="@+id/btn_quest"
	    android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/label_quest" />

	<Button
	    android:id="@+id/btn_nfc"
	    android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/label_nfc" />

</LinearLayout>