<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
	android:background="@drawable/popup_border1"
	>
	
	<TextView
      	android:id="@+id/inventoryPopupName"
      	android:layout_width="@dimen/popup_width"
      	android:layout_height="@dimen/popup_title_height"
      	android:padding="@dimen/popup_text_padding"
      	android:textColor="@color/popup1_title_text_color"
		android:textStyle="bold"
		android:textSize="@dimen/titlebar_textSize_L"
		android:gravity="left|center_vertical"
      	android:background="@color/popup1_title_background_color"
      	/>
  	
    <ImageView
        android:id="@+id/inventoryPopupitemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="3dp"
        android:contentDescription="@string/popup_image_description"
        android:layout_below="@id/inventoryPopupName"
        />
    
	<TextView
    	android:id="@+id/label_quantity"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:layout_below="@id/inventoryPopupName"
        android:layout_toRightOf="@id/inventoryPopupitemImage"
        android:paddingTop="@dimen/popup_text_padding"
        android:paddingBottom="@dimen/popup_text_padding"
        android:paddingLeft="@dimen/popup_text_padding"
        android:paddingRight="10dp"
     	android:text="@string/popup_label_item_detail_quantity"
      	android:textColor="@color/popup1_label_text_color1"
		android:textSize="@dimen/titlebar_textSize_M"
		android:textStyle="bold"
     	/>
	
	<TextView
       	android:id="@+id/inventoryPopupQuantity"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
        android:layout_below="@id/inventoryPopupName"
        android:layout_toRightOf="@id/label_quantity"
	    android:padding="@dimen/popup_text_padding"
      	android:textColor="@color/popup1_label_text_color2"
		android:textSize="@dimen/titlebar_textSize_M"
		android:textStyle="bold"
        
       	/>
    <TextView
    	android:id="@+id/label_type"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
        android:layout_below="@id/inventoryPopupName"
        android:layout_toRightOf="@id/inventoryPopupQuantity"
        android:paddingTop="@dimen/popup_text_padding"
        android:paddingBottom="@dimen/popup_text_padding"
        android:paddingLeft="@dimen/popup_text_padding"
        android:paddingRight="10dp"
      	android:text="@string/popup_label_item_detail_type"
      	android:textColor="@color/popup1_label_text_color1"
		android:textSize="@dimen/titlebar_textSize_M"
		android:textStyle="bold"
      	/>
    
	<TextView
       	android:id="@+id/inventoryPopupType"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
        android:layout_below="@id/inventoryPopupName"
        android:layout_toRightOf="@id/label_type"
	    android:padding="@dimen/popup_text_padding"
      	android:textColor="@color/popup1_label_text_color2"
		android:textSize="@dimen/titlebar_textSize_M"
		android:textStyle="bold"
       	/>
	
	<TextView
        android:id="@+id/inventoryPopupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_type"
	    android:padding="@dimen/popup_text_padding"
		android:textStyle="italic"
      	android:textColor="@color/popup1_label_text_color2"
		android:textSize="@dimen/titlebar_textSize_M"
        android:layout_toRightOf="@id/inventoryPopupitemImage"
        />
	
    <LinearLayout
        android:id="@+id/layout_use_text"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:gravity="center"
	    android:layout_below="@id/inventoryPopupitemImage"
	    android:orientation="horizontal"
        >
        
	    <TextView
	    	android:id="@+id/label_use_text1"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	        android:padding="@dimen/popup_text_padding"
	      	android:text="@string/popup_label_item_detail_use_text1"
	      	android:textColor="@color/popup1_label_text_color2"
			android:textSize="@dimen/titlebar_textSize_M"
			android:textStyle="bold"
	      	/>
    
		<TextView
	       	android:id="@+id/inventoryPopupAP"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	        android:padding="@dimen/popup_text_padding"
	      	android:textColor="@color/popup1_label_text_color2"
			android:textSize="@dimen/titlebar_textSize_M"
			android:textStyle="bold"
	       	/>
	  	
	    <ImageView
	        android:id="@+id/popup_icon_ap"
	        android:layout_width="16dp"
	        android:layout_height="16dp"
	        android:src="@drawable/icon_ap_inverse"
	        android:contentDescription="@string/popup_image_description"
	        />
    
		<TextView
	       	android:id="@+id/inventoryPopupExp"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	        android:padding="@dimen/popup_text_padding"
	      	android:textColor="@color/popup1_exp_label_text_color"
			android:textSize="@dimen/titlebar_textSize_M"
			android:textStyle="bold"
	       	/>
	    
	    <TextView
	    	android:id="@+id/label_use_text2"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	        android:padding="@dimen/popup_text_padding"
	      	android:text="@string/popup_label_item_detail_use_text2"
	      	android:textColor="@color/popup1_exp_label_text_color"
			android:textSize="@dimen/titlebar_textSize_M"
			android:textStyle="bold"
	      	/>
	    
	    <TextView
	    	android:id="@+id/label_use_text3"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	        android:padding="@dimen/popup_text_padding"
	      	android:text="@string/popup_label_item_detail_use_text3"
	      	android:textColor="@color/popup1_label_text_color2"
			android:textSize="@dimen/titlebar_textSize_M"
			android:textStyle="bold"
	      	/>
    </LinearLayout>
    <Button
    	android:id="@+id/button_use"
      	android:layout_width="@dimen/popup_button_width"
      	android:layout_height="@dimen/popup_button_height"
      	android:layout_marginTop="10dp"
      	android:layout_marginLeft="50dp"
      	android:layout_marginRight="50dp"
      	android:text="@string/popup_label_item_detail_use_button_text"
      	android:textColor="@color/popup1_button_text_color"
		android:textSize="@dimen/titlebar_textSize_M"
		android:textStyle="bold"
		android:background="@drawable/popup_btn_selector"
        android:contentDescription="@string/popup_image_description"
		android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_use_text"
      	/>
</RelativeLayout>