<com.example.skcc_client.ui.player.PlayerInfoLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/titlebar_user_info"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingTop="5dp"
	android:paddingBottom="5dp"
	android:baselineAligned="false"
	android:orientation="horizontal"
	>
	
    <LinearLayout
        android:id="@+id/playerInfo1"
		android:layout_width="90dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		>
	
	    <RelativeLayout
        	android:id="@+id/playerInfo11"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			>
		
		 	<TextView
		 	    android:id="@+id/playerInfoLevelLabel"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:paddingRight="5dp"
				android:text="@string/label_level"
				android:textSize="@dimen/titlebar_textSize_M"
				android:textColor="@color/titlebar_lv_font_color"
				android:textStyle="bold"
				android:gravity="bottom"
		 	    />
			
		 	<TextView
		 	    android:id="@+id/playerInfoLevel"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:textSize="@dimen/titlebar_textSize_M"
				android:textColor="@color/titlebar_lv_font_color"
				android:textStyle="bold"
				android:gravity="bottom"
				android:layout_toRightOf="@id/playerInfoLevelLabel"
		 	    />
		</RelativeLayout>

	
	    <LinearLayout
        	android:id="@+id/playerInfo12"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:orientation="vertical"
			>
	        <ProgressBar
	            android:id="@+id/playerExpProgressBar"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="3dp"
	            android:progressDrawable="@drawable/progressbar_exp"
	            />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/playerInfo2"
		android:layout_width="150dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:orientation="vertical"
		>
			
	 	<TextView
	 	    android:id="@+id/playerId"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:textSize="@dimen/titlebar_textSize_L"
			android:textColor="@color/titlebar_player_id_font_color"
			android:textStyle="bold"
			android:gravity="center_vertical|center"
	 	    />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/playerInfo3"
		android:layout_width="100dp"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		>
	
	    <RelativeLayout
        	android:id="@+id/playerInfo31"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			>
			<ImageView
			    android:id="@+id/iconMoneyInverse"
			    android:src="@drawable/icon_money_inverse"
			    android:contentDescription="@string/null_string"
			    android:paddingTop="2dp"
			    android:layout_marginRight="5dp"
			    android:layout_height="fill_parent"
			    android:layout_width="wrap_content"
				/>
			
		 	<TextView
		 	    android:id="@+id/playerMoney"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:textSize="@dimen/titlebar_textSize_S"
				android:textColor="@color/titlebar_player_money_font_color"
				android:textStyle="bold"
				android:gravity="bottom"
				android:layout_toRightOf="@id/iconMoneyInverse"
		 	    />
		 	
		</RelativeLayout>
	    <RelativeLayout
        	android:id="@+id/playerInfo32"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			>
			<ImageView
			    android:id="@+id/iconAPInverse"
			    android:src="@drawable/icon_ap_inverse"
			    android:contentDescription="@string/null_string"
			    android:paddingTop="2dp"
			    android:layout_marginRight="3dp"
			    android:layout_height="fill_parent"
			    android:layout_width="wrap_content"
				/>
			
		 	<TextView
		 	    android:id="@+id/playerCurrentAP"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:textSize="@dimen/titlebar_textSize_S"
				android:textColor="@color/titlebar_player_current_ap_font_color"
			    android:paddingRight="3dp"
				android:textStyle="bold"
				android:gravity="bottom"
				android:layout_toRightOf="@id/iconAPInverse"
		 	    />
			
		 	<TextView
		 	    android:id="@+id/playerAPSeparator"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
			    android:paddingRight="3dp"
				android:text="@string/ap_separator"
				android:textSize="@dimen/titlebar_textSize_S"
				android:textColor="@color/titlebar_player_ap_separator_font_color"
				android:textStyle="bold"
				android:gravity="bottom"
				android:layout_toRightOf="@id/playerCurrentAP"
		 	    />
			
		 	<TextView
		 	    android:id="@+id/playerMaxAP"
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:textSize="@dimen/titlebar_textSize_S"
				android:textColor="@color/titlebar_player_max_ap_font_color"
				android:textStyle="bold"
				android:gravity="bottom"
				android:layout_toRightOf="@id/playerAPSeparator"
		 	    />
		</RelativeLayout>
	</LinearLayout>
</com.example.skcc_client.ui.player.PlayerInfoLayout>

